test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-sync-update-target/1-1-source.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:cpol-clone-sync-update-target
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
- apiGroups:
  - ''
  resources:
  - secrets
  verbs:
  - get
  - list
  - create
  - update
  - delete
  - patch
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-ns-2
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: source-secret
  namespace: default
type: Opaque
