test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-sync-update-target/3-1-trigger.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: default-deny
  namespace: default
data:
  namespaces: foreach-ns-1,foreach-ns-2
  fo: bar
