test/conformance/chainsaw/generate/foreach/clusterpolicy/clone/sync/cpol-clone-sync-update-target/5-1-update-target.yaml
apiVersion: v1
data:
  foo: bm90LWJhcg==
kind: Secret
metadata:
  name: cloned-secret-0-foreach-ns-1
  namespace: foreach-ns-1
type: Opaque
